--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @charset "UTF-8" ;
 
+/* テキストの自動拡大化を無効化 */
+body {
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
 /* 基本設定　*/
 
 * {
@@ -39,6 +45,11 @@ header {
   font-size: 40px;
   color: #555d6b;
   font-family: 'Raleway', sans-serif;
+}
+
+header a {
+  color: inherit;
+  text-decoration: none;
 }
 
 /* ナビゲーションメニュー */
@@ -122,8 +133,8 @@ figure.hero img {
   width: 250px;
 }
 
-/* 記事一覧 */
-section {
+/* 記事一覧 & 記事ページの注目記事メニュー */
+section, aside ul {
   grid-row: recent;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -131,12 +142,12 @@ section {
   gap: 20px 10px;
 }
 
-section a {
+section a, aside a {
   color: #000000;
   text-decoration: none;
 }
 
-section a:hover{
+section a:hover, aside a:hover{
   text-decoration: underline;
 }
 
@@ -148,7 +159,7 @@ section h2 {
   text-align: center;
 }
 
-section h3 {
+section h3, aside h3 {
   font-size: 14px;
 }
 
@@ -203,11 +214,49 @@ body::after {
   grid-row: kiji;
 }
 
+/* 記事ページ:時計アイコン */
+.fa-clock {
+  color: #888888;
+  margin-right: 5px;
+}
+
 /* 記事ページ:サブメニュー */
 .post div {
   grid-row: submenu;
 }
 
+aside {
+  border: solid 1px #dddddd;
+  padding: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+aside h2 {
+  border-bottom: solid 1px #dddddd;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  color: #888888;
+  font-weight: normal;
+  font-family: 'Raleway', sans-serif;
+}
+
+aside p {
+  font-size: 14px;
+}
+
+aside:first-child img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+}
+
+aside ul {
+  list-style-type: none;
+  padding: 0;
+  text-align: left;
+}
 
 /* ===== PC版の設定===== */
 @media (min-width: 768px) {
@@ -263,6 +312,37 @@ body::after {
     grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 20px;
     column-gap: 20px;
+  }
+
+  /* PC版:記事ページ */
+  .post {
+    grid-template-rows: 
+      [head] 100px
+      [kiji submenu] auto
+      [foot] 100px;
+  }
+
+  /* PC版:記事ページ:記事 */
+  .post article {
+    grid-column: 2 / span 4;
+  }
+
+  .post article h1 {
+    font-size: 42px;
+  }
+
+  .post article p {
+    font-size: 18px;
+  }
+
+  /* PC版:記事ページ:サブメニュー */
+  .post div {
+    grid-column: 6 / span 2;
+  }
+
+  /* PC版:記事ページ:バー */
+  .post::before {
+    margin-top: -20px;
   }
 
 }
